Added frame length and bad char checks to BaseOpenMessage. Updated toStringVerbose(). Updated MessageTest.